--- a/docs/demo/index.css
+++ b/docs/demo/index.css
@@ -15,15 +15,19 @@
     left: 0;
     right: 0;
   }
-  10% {
-    left: 100%;
+  20% {
+    left: 0;
     right: 0;
   }
-  80% {
+  25% {
     left: 100%;
     right: 0;
   }
   90% {
+    left: 100%;
+    right: 0;
+  }
+  95% {
     left: 0;
     right: 100%;
   }
@@ -56,7 +60,7 @@ h1::after {
   right: 0;
   z-index: -1;
   background-color: white;
-  animation: whiteout 10s ease-out infinite;
+  animation: whiteout 10s linear infinite;
 }
 input {
   font-family: rounded-x-mgenplus-1mn-regular, monospace;
